@@ -139,9 +139,9 @@ namespace mln
   };
 
 
-  /*----------------.
-  | Value -> bool.  |
-  `----------------*/
+  /*-------------------.
+  | Value -> Boolean.  |
+  `-------------------*/
 
   /// \cond INTERNAL_API
   template <>
@@ -195,9 +195,9 @@ namespace mln
   };
 
 
-  /*--------------------------.
-  | (Value, Value) -> Boolean.|
-  `--------------------------*/
+  /*----------------------------.
+  | (Value, Value) -> Boolean.  |
+  `----------------------------*/
 
   /// \cond INTERNAL_API
   template <>
