@@ -1,3 +1,9 @@
+2010-02-08  Roland Levillain  <roland@lrde.epita.fr>
+
+	Typos in comments.
+
+	* mln/core/concept/function.hh: Here.
+
 2009-09-24  Roland Levillain  <roland@lrde.epita.fr>
 
 	Reformat a documentation header.
